[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "Customer Support Triage Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
